--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -54,6 +54,7 @@
 .city {
   font-family: 'Nothing', sans-serif;
   font-size: 64px;
+  letter-spacing: 0em;
 }
 
 .projectsSection {
